Header and image gallery components added. Basic SASS added to get them in roughly the right place relative to each other.

--- a/src/css/abstractCSS/_variables.sass
+++ b/src/css/abstractCSS/_variables.sass
@@ -9,3 +9,6 @@ $spacing-300-24: 1.5rem
 $spacing-200-16: 1rem
 $spacing-100-8: 0.5rem
 $spacing-50-4: 0.25rem
+
+$breakpoint-tablet: 700px
+$breakpoint-desktop: 1120px
