Finished adding main section components

--- a/src/css/componentsCSS/_main.sass
+++ b/src/css/componentsCSS/_main.sass
@@ -1,5 +1,8 @@
 @use "../index.sass" as styles
 
+main
+    background-color: pink
+    
 .image-container
     display: grid
     grid-template: 1fr 1fr / 1fr 1fr
@@ -8,3 +11,4 @@
     img 
         width: 100%
         height: auto
+
